# backend-people-control

./: .env-example  API.md  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yml  docker-compose.yml
core/: admin.py  filters.py  forms.py  models.py  serializers.py  soft_delete.py  urls.py  views.py  viewsets.py
core/migrations/: 0001_initial.py  0002_company_department_employee.py  0003_company_state_acronym.py  0004_company_name.py  0005_remove_employee_date_of_hire.py  0006_remove_department_cost_center_costcenter.py  0007_cost.py
core/serializers/: br_company_serializer.py  department_serializer.py  employee_serializer.py
core/services/: company_service.py  company_svc.py
core/utils/: decorators.py  forms.py  soft_delete.py  str_utils.py
dev/: README.md
dev/management/commands/: populate_database.py
dev/tests_core/: conftest.py  login_view_tests.py  soft_delete_tests.py  test_soft_delete.py
dev/tests_core/tests_services/: company_svc_tests.py
dev/tests_core/tests_views/: company_views_tests.py  login_views_tests.py
dev/tests_core/views/: company_views_tests.py  login_views_tests.py
people_control/: asgi.py  settings.py  urls.py  wsgi.py
